[package]
name = "site-archive"
version = "0.1.0"
edition = "2021"
description = "standalone wallpaper scraper/archiver"

[[bin]]
name = "scrape"
path = "src/main.rs"

[dependencies]
wreq = { version = "6.0.0-rc.28", features = ["cookies", "gzip", "brotli", "zstd", "deflate", "form"] }
wreq-util = { version = "3.0.0-rc.10", features = ["emulation"] }
scraper = "0.22"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"
